--- a/product-service/src/main/resources/db/changelog/changelog-00002.yaml
+++ b/product-service/src/main/resources/db/changelog/changelog-00002.yaml
@@ -7,9 +7,9 @@ databaseChangeLog:
             sql: >
               CREATE TABLE product(
                   product_id      SERIAL,
-                  name            VARCHAR(255),
+                  name            VARCHAR(255)   NOT NULL,
                   description     VARCHAR(255),
-                  price           NUMERIC(10, 2),
+                  price           NUMERIC(10, 2) NOT NULL,
                   category_id     BIGINT,
                   CONSTRAINT pk_product_id PRIMARY KEY (product_id),
                   CONSTRAINT uq_product_name UNIQUE (name),
