ref: table#product insert mock data on start project

--- a/product-service/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/product-service/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: changelog-00003.yaml
       relativeToChangelogFile: true
+  - include:
+      file: changelog-00004.yaml
+      relativeToChangelogFile: true
