--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/customer_database
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,6 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
-spring.liquibase.url=jdbc:postgresql://localhost:5433/customer_database
+spring.liquibase.url=jdbc:postgresql://localhost:5433/postgres
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
+
+
